<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_dashboard"
            android:fontFamily="sans-serif"/>

        <item
            android:id="@+id/nav_view_report"
            android:icon="@drawable/viewreport"
            android:title="@string/menu_view_report"
            android:fontFamily="sans-serif"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile"
            android:fontFamily="sans-serif"/>




    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/phone"
                android:title="@string/menu_contact"
                android:fontFamily="sans-serif"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout"
                android:fontFamily="sans-serif"/>
        </menu>
    </item>

</menu>
