<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard"
    >

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.niramaya.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.niramaya.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />



    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.niramaya.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.niramaya.ui.contacts.ContactsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_view_report"
        android:name="com.example.niramaya.ui.view_report.ViewReportFragment"
        android:label="@string/menu_view_report"
        tools:layout="@layout/fragment_view_report" />

</navigation>