<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/header"
        android:fontFamily="sans-serif"
        android:text="Contact Us"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/mail"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:text="ckpgroupb1@gmail.com"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <TextView
        android:id="@+id/t4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/header"
        android:fontFamily="sans-serif"
        android:text="Emergency Contacts"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/block"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/t5"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="20dp"
            android:text="@string/Civilhospital"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:text="Call"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/block"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/t6"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/Mahavirhospital"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:text="Call"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/block"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/t7"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/Applehospital"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:text="Call"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/block"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/t8"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/Smimerhospital"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:text="Call"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</LinearLayout>